Fixing routes and imports

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omarlsant-porfolio",
   "private": true,
-  "homepage": "https://omarlsant.github.io/omarlsant-porfolio",
+  "homepage": "https://omarlsant.github.io/omarlsant-portfolio",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
