--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.4.0",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.0.17",
     "tsparticles": "^3.8.1"
   },
